2008-06-24  Michael Wiegand <michael.wiegand@intevation.de>

	Added a first draft of the OTP specification.
	
	* doc/otp/: Added.
	
	* doc/otp/otp_specification_10.txt: Added.

2008-06-20  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/users.c (users_add_rule): Fixed overflow problem.
	Found by Ales Nosek.

2008-06-19  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/control: Minor updates to control file, fixed
	Section, Priority and Build-Depends directives.

2008-06-17  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* doc/kb_saving.txt: Changed some history naming back from
	OpenVAS to Nessus (probably a search-replace mistake).
	Also removed a documentation URL to nessus.org where
	the page has been removed meanwhile.

2008-05-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Second step for Change Request #4 (Remove plugin upload feature),
	http://www.openvas.org/openvas-cr-4.html

	* MANIFEST: Added packaging/debian

	* openvasd/pluginupload.c, openvasd/pluginupload.h: Added
	note about when this module can be removed.

	* openvasd/ntp_11.c (ntp_11_read_prefs): remove
	consideration of system preferences "admin_user",
	"plugin_upload" and "plugin_upload_suffixes".
	(ntp_11_parse_input): Remove undocumented protocol
	command "HUP_FATHER".

	* openvasd/preferences.c (preferences_new):
	Removed write defaults for these system preferences:
	"admin_user", "plugin_upload" and "plugin_upload_suffixes".
	(preferences_upload_enabled, preferences_upload_suffixes,
	preferences_user_is_admin): Removed.
	(preferences_reset_cache): Removed call of
	preferences_upload_enabled.

	* openvasd/preferences.h: Removed protos for
	preferences_user_is_admin, preferences_upload_enabled
	and preferences_upload_suffixes.

	* openvasd/comm.c (comm_send_preferences): No need of
	exception for "admin_user" any more.

	* openvasd/utils.c (get_max_hosts_number, get_max_checks_number): Removed
	allowance of overridung max_checks and max_hosts when